# MyLearningJourney

./: .gitignore  README.md
chess/myChessEngine/: .gitignore  CMakelists.txt  README.md  chess.cpp  playDraky.cpp
financialEngineering/AdvancedQuantitativeFinanceWithC++/: .gitignore  CMakelists.txt  README.md  main.cpp  main_credit.cpp  main_fx.cpp  main_ir.cpp
financialEngineering/C++_Design_Patterns_and_Derivatives_Pricing/: CMakelists.txt  README.md  chapter_10.cpp  chapter_2.cpp  chapter_3.cpp  chapter_4.cpp  chapter_5.cpp  chapter_6.cpp  chapter_7.cpp  chapter_8.cpp  chapter_9.cpp  main.cpp
financialEngineering/Fin_Inst_Pricing_C++/: .gitignore  CMakelists.txt  README.md  main.cpp  stl_tests.cpp
financialEngineering/QuantitativeFinace_OOP_C++/: .gitignore  CMakelists.txt  LICENSE.txt  README.md  tester.cpp  tester_2.cpp
labs/cds/: CMakelists.txt  README.md  main.cpp
labs/fixed_income/: CMakelists.txt  README.md  main.cpp
labs/linear_algebra/: CMakelists.txt  README.md  main.cpp
labs/my_pricing_library/: CMakelists.txt  main.cpp
maths/numerical_recipes/: CMakelists.txt  main.cpp
programming/Deciphering_OOP_with_C++/: CMakelists.txt  chapter_1.cpp
setupVSC/vscode/: c_cpp_properties.json  launch.json  settings.json  tasks.json
tutorials/cmake/cmake_tutorials/module2/: CMakeLists.txt  makefile  soustraction.cpp  soustraction.hpp
tutorials/cmake/cmake_tutorials/module6/: CMakeLists.txt
tutorials/cmake/cmake_tutorials/module6/my_math/: CMakeLists.txt
tutorials/cmake/cmake_tutorials/module6/my_math/src/: soustraction.cpp
tutorials/cmake/cmake_tutorials/module6/my_print/: CMakeLists.txt
tutorials/cmake/cmake_tutorials/module7/: CMakeLists.txt  main.cpp
tutorials/cmake/cmake_tutorials/module7/my_math/: CMakeLists.txt
tutorials/cmake/cmake_tutorials/module7/my_math/src/: addition.cpp
tutorials/cmake/cmake_tutorials/module7/my_print/src/: printer.cpp
(+783 files in other folders)
